Hice las secciones Introducción, Arquitectura Codificador/Decodificador, Atención.

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,1 +1,6 @@
-{}
+{
+  "cssTheme": "Things",
+  "interfaceFontFamily": "SF Display",
+  "textFontFamily": "SF Text",
+  "monospaceFontFamily": "SF Mono"
+}
